RESOLVED FIXED64371
[Qt][WK2] QDesktopWebView crashes if resized without web process.
https://bugs.webkit.org/show_bug.cgi?id=64371
Summary [Qt][WK2] QDesktopWebView crashes if resized without web process.
Andreas Kling
Reported 2011-07-12 11:03:24 PDT
There are some incorrect assumptions about drawingArea() never being null in QtWebPageProxy. It may be null when the web process has crashed, so we need to handle this gracefully.
Attachments
Proposed patch (1.62 KB, patch)
2011-07-12 11:04 PDT, Andreas Kling
benjamin: review+
benjamin: commit-queue-
Andreas Kling
Comment 1 2011-07-12 11:04:05 PDT
Created attachment 100523 [details] Proposed patch
Benjamin Poulain
Comment 2 2011-07-12 11:07:11 PDT
Comment on attachment 100523 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=100523&action=review > Source/WebKit2/ChangeLog:11 > + (Q drawing area is null.tWebPageProxy::setDrawingAreaSize): Fail silently if there is no "Q drawing area is null.tWebPageProxy" ????
Andreas Kling
Comment 3 2011-07-12 11:08:10 PDT
(In reply to comment #2) > (From update of attachment 100523 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=100523&action=review > > > Source/WebKit2/ChangeLog:11 > > + (Q drawing area is null.tWebPageProxy::setDrawingAreaSize): Fail silently if there is no > > "Q drawing area is null.tWebPageProxy" ???? vim is hard :(
Andreas Kling
Comment 4 2011-07-12 11:13:56 PDT
Note You need to log in before you can comment on or make changes to this bug.