[Qt][WK2] QDesktopWebView crashes if resized without web process. https://bugs.webkit.org/show_bug.cgi?id=64371

Reviewed by Benjamin Poulain.

* UIProcess/qt/QtWebPageProxy.cpp:
(QtWebPageProxy::paint): Remove an invalid assertion. The drawing
area may be null if the web process has crashed.
(QtWebPageProxy::setDrawingAreaSize): Fail silently if there is no
drawing area.


Canonical link: https://commits.webkit.org/80093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90829 268f45cc-cd09-0410-ab3c-d52691b4dbfc